serifikatlar səhifəsi hazır

--- a/src/sass/news-internal.scss
+++ b/src/sass/news-internal.scss
@@ -1,7 +1,8 @@
 #news-internal,
 #about,
 #big-master,
-#company-head {
+#company-head,
+#certificates {
   .new-container {
     padding: 0 15px;
     max-width: 490px;
@@ -14,6 +15,11 @@
       line-height: 20px;
     }
     .owl-carousel {
+      .owl-stage {
+        .owl-item {
+          width: auto !important;
+        }
+      }
       margin: 10px 0 25px 0;
       a {
         font: 14px ProximaNovaRegular;
@@ -26,11 +32,6 @@
       }
       a:hover {
         color: #76a313;
-      }
-      .owl-stage {
-        .owl-item {
-          // width: auto !important;
-        }
       }
       .owl-nav {
         button {
