--- a/src/sass/certificates-internal.scss
+++ b/src/sass/certificates-internal.scss
@@ -28,6 +28,7 @@
         img {
           width: 100%;
           object-fit: cover;
+          height: 150px;
         }
       }
       .zoom-btn {
