--- a/src/sass/products.scss
+++ b/src/sass/products.scss
@@ -219,7 +219,7 @@
       display: flex;
       border: 1px solid #e0e0e0;
       border-radius: 31px;
-      width: 158px;
+
       height: 26px;
       justify-content: space-between;
       a {
@@ -231,15 +231,17 @@
       }
       .pagination-ul {
         list-style: none;
-        width: 90px;
         display: flex;
         justify-content: space-between;
         margin-bottom: 0;
+        margin-left: 5px;
+        margin-right: 5px;
         padding-left: 0;
-        li{
+        li {
           list-style-type: none;
         }
         .pagination-item {
+          padding: 0 5px;
           a {
             display: flex;
             align-items: center;
