--- a/src/sass/responsive.scss
+++ b/src/sass/responsive.scss
@@ -179,6 +179,18 @@
   .footer-item {
     width: 26% !important;
   }
+  .certificates-internal-conainer {
+    .items {
+      .item {
+        width: 47%;
+        .item-img {
+          img {
+            height: 200px;
+          }
+        }
+      }
+    }
+  }
 }
 @media (max-width: 576px) {
   #search-tab {
@@ -239,5 +251,17 @@
   }
   .news-item {
     width: 100% !important;
+  }
+  .certificates-internal-conainer {
+    .items {
+      .item {
+        width: 100%;
+        .item-img {
+          img {
+            height: 294px;
+          }
+        }
+      }
+    }
   }
 }
