--- a/src/sass/news-internal.scss
+++ b/src/sass/news-internal.scss
@@ -3,6 +3,7 @@
 #big-master,
 #company-head,
 #faq,
+.common-section,
 #certificates {
   .new-container {
     padding: 0 15px;
@@ -202,6 +203,52 @@
         }
         .owl-next {
           right: -7%;
+        }
+      }
+    }
+  }
+}
+.common-section{
+  .pagination {
+    display: flex;
+    justify-content: center;
+    margin-top: 60px;
+    .sub-pagination {
+      padding: 0 10px;
+      display: flex;
+      border: 1px solid #e0e0e0;
+      border-radius: 31px;
+      width: 158px;
+      height: 26px;
+      justify-content: space-between;
+      a {
+        display: flex;
+        align-items: center;
+        span {
+          display: flex;
+        }
+      }
+      .pagination-ul {
+        list-style: none;
+        width: 90px;
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 0;
+        padding-left: 0;
+        li{
+          list-style-type: none;
+        }
+        .pagination-item {
+          a {
+            display: flex;
+            align-items: center;
+            font: 14px ProximaNovaRegular;
+            color: #3b3b3b;
+            height: 100%;
+            span {
+              display: flex;
+            }
+          }
         }
       }
     }
