--- a/src/sass/responsive.scss
+++ b/src/sass/responsive.scss
@@ -188,6 +188,17 @@
     }
   }
 }
+@media (max-width: 850px) {
+  #cart {
+    .cart-items {
+      .cart-item {
+        width: 40%;
+        margin-left: 35px;
+        margin-right: 35px;
+      }
+    }
+  }
+}
 @media (max-width: 768px) {
   #search-tab {
     #close-btn {
@@ -205,6 +216,27 @@
     .company-images {
       .company-image {
         width: 48%;
+      }
+    }
+  }
+  #cart {
+    .cart-items {
+      .cart-item {
+        width: 37%;
+        margin-left: 40px;
+        margin-right: 40px;
+      }
+    }
+  }
+}
+@media (max-width: 675px) {
+  #cart {
+    .cart-items {
+      justify-content: center;
+      .cart-item {
+        width: 360px;
+        margin-left: 0;
+        margin-right: 0;
       }
     }
   }
