--- a/src/sass/products.scss
+++ b/src/sass/products.scss
@@ -1,12 +1,8 @@
 #products,
 #faq,
-<<<<<<< HEAD
 #news,
-#mass-media-2 {
-=======
-.suggestion-section,
-#news {
->>>>>>> ba4b153606f2faf92406d4cf70470257ca4987b2
+#mass-media-2,
+.suggestion-section {
   .my-container {
     max-width: 1100px;
     margin-left: auto;
@@ -216,50 +212,5 @@
       }
     }
   }
-  .pagination {
-    display: flex;
-    justify-content: center;
-    margin-top: 60px;
-    .sub-pagination {
-      padding: 0 10px;
-      display: flex;
-      border: 1px solid #e0e0e0;
-      border-radius: 31px;
-
-      height: 26px;
-      justify-content: space-between;
-      a {
-        display: flex;
-        align-items: center;
-        span {
-          display: flex;
-        }
-      }
-      .pagination-ul {
-        list-style: none;
-        display: flex;
-        justify-content: space-between;
-        margin-bottom: 0;
-        margin-left: 5px;
-        margin-right: 5px;
-        padding-left: 0;
-        li {
-          list-style-type: none;
-        }
-        .pagination-item {
-          padding: 0 5px;
-          a {
-            display: flex;
-            align-items: center;
-            font: 14px ProximaNovaRegular;
-            color: #3b3b3b;
-            height: 100%;
-            span {
-              display: flex;
-            }
-          }
-        }
-      }
-    }
-  }
+  
 }
