--- a/src/sass/responsive.scss
+++ b/src/sass/responsive.scss
@@ -65,6 +65,13 @@
       }
     }
   }
+  #mass-media-2 {
+    .company-images {
+      .company-image {
+        width: 32%;
+      }
+    }
+  }
 }
 @media (max-width: 992px) {
   header {
@@ -165,6 +172,21 @@
   .news-item {
     width: 45% !important;
   }
+
+  .partners-container {
+    .owl-carousel {
+      .owl-stage {
+        width: 563px !important;
+      }
+    }
+  }
+  #mass-media-2 {
+    .company-images {
+      .company-image {
+        width: 31%;
+      }
+    }
+  }
 }
 @media (max-width: 768px) {
   #search-tab {
@@ -173,11 +195,18 @@
       //right: 41px !important;
     }
   }
-  .owl-nav {
-    visibility: hidden;
-  }
+  // .owl-nav {
+  //   visibility: hidden;
+  // }
   .footer-item {
     width: 26% !important;
+  }
+  #mass-media-2 {
+    .company-images {
+      .company-image {
+        width: 48%;
+      }
+    }
   }
 }
 @media (max-width: 576px) {
@@ -239,5 +268,25 @@
   }
   .news-item {
     width: 100% !important;
+  }
+  .certificates-internal-conainer {
+    .items {
+      .item {
+        width: 100%;
+        .item-img {
+          img {
+            height: 294px;
+          }
+        }
+      }
+    }
+  }
+  #mass-media-2 {
+    .company-images {
+      .company-image {
+        width: 100%;
+        height: 200px;
+      }
+    }
   }
 }
