--- a/src/sass/projects.scss
+++ b/src/sass/projects.scss
@@ -121,3 +121,22 @@
     }
   }
 }
+.private-projects{
+  .owl-carousel{
+    .item{
+      .project-item{
+        width: 100%;
+        margin-top: 0;
+        .project-item-name{
+          a{
+            img{
+              display: unset;
+              width: auto;
+            }
+          }
+        }
+      }
+    
+    }
+  }
+}
