--- a/src/sass/mass-media-1.scss
+++ b/src/sass/mass-media-1.scss
@@ -1,5 +1,11 @@
 #mass-media-1 {
+  .media-container-1{
+    h3{
+      margin-top: 40px;
+    }
+  }
   .logo-item {
+    margin-bottom: 2rem;
     .logo-item-img {
       height: 157px;
       background-color: #f0f0f0;
