--- a/src/sass/news-internal.scss
+++ b/src/sass/news-internal.scss
@@ -16,52 +16,6 @@
       color: #3b3b3b;
       line-height: 20px;
     }
-    .owl-carousel {
-      .owl-stage {
-        .owl-item {
-          width: auto !important;
-        }
-      }
-      margin: 10px 0 25px 0;
-      a {
-        font: 14px ProximaNovaRegular;
-        font-weight: normal;
-        font-stretch: normal;
-        font-style: normal;
-        line-height: normal;
-        letter-spacing: normal;
-        color: #3b3b3b;
-      }
-      a:hover {
-        color: #76a313;
-      }
-      .owl-nav {
-        button {
-          position: absolute;
-          top: 7px;
-          outline: none;
-          width: 14px;
-          height: 14px;
-          margin: 0;
-          display: flex;
-          align-items: center;
-          justify-content: center;
-          img {
-            width: auto !important;
-            margin: 0;
-          }
-        }
-        .owl-prev {
-          left: -35px;
-        }
-        .owl-next {
-          right: -35px;
-        }
-        button:hover {
-          background-color: transparent;
-        }
-      }
-    }
     h3 {
       font-weight: 900 !important;
       margin-top: 8px;
@@ -143,7 +97,7 @@
       margin-bottom: 0;
       line-height: 20px;
     }
-    img {
+    .img-class {
       margin: 15px 0;
       width: 100%;
       object-fit: cover;
@@ -202,52 +156,6 @@
         }
         .owl-next {
           right: -7%;
-        }
-      }
-    }
-  }
-}
-.common-section{
-  .pagination {
-    display: flex;
-    justify-content: center;
-    margin-top: 60px;
-    .sub-pagination {
-      padding: 0 10px;
-      display: flex;
-      border: 1px solid #e0e0e0;
-      border-radius: 31px;
-      width: 158px;
-      height: 26px;
-      justify-content: space-between;
-      a {
-        display: flex;
-        align-items: center;
-        span {
-          display: flex;
-        }
-      }
-      .pagination-ul {
-        list-style: none;
-        width: 90px;
-        display: flex;
-        justify-content: space-between;
-        margin-bottom: 0;
-        padding-left: 0;
-        li{
-          list-style-type: none;
-        }
-        .pagination-item {
-          a {
-            display: flex;
-            align-items: center;
-            font: 14px ProximaNovaRegular;
-            color: #3b3b3b;
-            height: 100%;
-            span {
-              display: flex;
-            }
-          }
         }
       }
     }
