--- a/src/sass/pagination.scss
+++ b/src/sass/pagination.scss
@@ -18,15 +18,15 @@
       }
     }
     .pagination-ul {
-      list-style: none;
-      display: flex;
-      justify-content: space-between;
-      margin-bottom: 0;
-      margin-left: 5px;
-      margin-right: 5px;
-      padding-left: 0;
+      list-style: none !important;
+      display: flex !important;
+      justify-content: space-between !important;
+      margin-bottom: 0 !important;
+      margin-left: 5px !important;
+      margin-right: 5px !important;
+      padding-left: 0 !important;
       li {
-        list-style-type: none;
+        list-style-type: none !important;
       }
       .pagination-item {
         padding: 0 5px;
