--- a/src/sass/product-content.scss
+++ b/src/sass/product-content.scss
@@ -103,196 +103,50 @@
         margin-top: 7px;
         justify-content: start !important;
       }
-    
+
       .product-delivery {
         margin-top: 28px;
         font: 14px ProximaNovaSemiBold;
         color: #3b3b3b;
         margin-bottom: 9px;
       }
-      .favorite-btn {
-        width: 30px;
-        height: 30px;
-        background-color: #b2b2b2;
-        border-radius: 50%;
+      .content-btns {
         display: flex;
-        cursor: pointer;
-        transition: all 0.3s ease;
-        i {
-          font-size: 12px;
-          margin: auto;
-          color: #fff;
+        .fav-btn {
+          background-color: #bfcdd3;
+          margin-right: 5px;
         }
-      }
-      .favorite-btn:hover {
-        background-color: #ed222a;
-      }
-      .add-to-bag-btn {
-        background-color: #91c81a;
-        width: 120px;
-        height: 30px;
-        color: #fff;
-        font: 14px ProximaNovaRegular;
-        border-radius: 15px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        cursor: pointer;
-        margin-left: 6px;
-      }
-    }
-  }
-}
-.similar-products {
-  max-width: 1366px;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 145px;
-  .product-sum {
-    font: 14px SourceSansProSemiBold;
-    color: #fff;
-    text-transform: uppercase;
-    span {
-      background-color: #91c81a;
-      padding: 3px 12px;
-    }
-    margin-bottom: 13px;
-  }
-  .similar-products-title {
-    font: 33px HoeflerTextBlack;
-    height: 45px;
-    a {
-      display: flex;
-      align-items: center;
-      color: #3b3b3b;
-      span {
-        margin-left: 10px;
-        display: flex;
-        align-items: center;
-        font-size: 20px;
-      }
-    }
-  }
-  .similar-product-links {
-    margin-bottom: 30px;
-    li {
-      margin-right: 14px;
-      a {
-        font: 14px ProximaNovaRegular;
-        color: #3b3b3b;
-      }
-    }
-  }
-
-  .owl-carousel {
-    .owl-stage-outer {
-      z-index: 1;
-    }
-    .item {
-      .product-item {
-        position: relative;
-        display: flex;
-        justify-content: center;
-        width: 100%;
-        height: 100%;
-        background-color: #f0f0f0;
-        img {
-          object-fit: contain;
-          margin: auto;
-          width: 100%;
-          height: 100%;
+        .fav-btn:hover{
+          background-color: #ed222a;
         }
-        span {
+        .chart-button {
           background-color: #91c81a;
-          padding: 2px 7px;
-          font: 14px SourceSansProSemiBold;
-          display: flex;
-          justify-content: center;
+          font-family: ProximaNovaRegular;
+          font-size: 14px;
+          font-weight: 500;
+          font-stretch: normal;
+          font-style: normal;
+          line-height: normal;
+          letter-spacing: normal;
+          color: #ffffff;
+          img{
+            margin-right: 5px;
+          }
+        }
+        button {
+          transition: all 0.3s ease;
           color: #fff;
-          position: absolute;
-          left: 10px;
-        }
-        svg {
-          g {
-            circle {
-              transition: all 0.3s ease;
-            }
-          }
-        }
-        svg:hover {
-          g {
-            circle {
-              fill: #ed222a;
-            }
-          }
-        }
-        .zoom-btn {
-          position: absolute;
-          right: 7px;
-          bottom: 67px;
-        }
-        .favorite-btn {
-          position: absolute;
-          right: 7px;
-          bottom: 38px;
-        }
-        .chart-btn {
-          position: absolute;
-          right: 7px;
-          bottom: 9px;
-        }
-      }
-      .product-text {
-        margin-top: 15px;
-        .product-name {
-          h3 {
-            text-align: center;
-            color: #3b3b3b;
-            font: 16px HoeflerTextBlack;
-            line-height: 16px;
-            white-space: nowrap;
-            text-overflow: ellipsis;
-            overflow: hidden;
-            padding-left: 15px;
-            padding-right: 15px;
-          }
-        }
-        .see-more-btn {
-          margin-top: 8px;
+          border: none;
+          outline: none;
+          border-radius: 15px;
           display: flex;
+          height: 26px;
+          align-items: center;
           justify-content: center;
-          a {
-            color: #3b3b3b;
-            font: 14px ProximaNovaMedium;
+          img {
+            width: 14px;
           }
         }
-      }
-    }
-    .owl-nav {
-      display: block !important;
-      position: absolute;
-      top: 0;
-      left: 0;
-      height: 100%;
-      width: 100%;
-      z-index: 0;
-      button {
-        background-color: #e6eff3;
-        width: 34px;
-        height: 34px;
-        border-radius: 50%;
-        outline: none;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        position: absolute;
-        top: 30%;
-      }
-      .owl-prev {
-        left: -4%;
-      }
-      .owl-next {
-        right: -4%;
       }
     }
   }
